kubernetes-network/canary/web-deploy-app-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-v2
  labels:
    app: web-v2
    course: k8s
    version: v2
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50
      maxUnavailable: 0
  selector:
    matchLabels:
      app: web-v2
  template:
    metadata:
      labels:
        app: web-v2
        course: k8s
        tag: canary-deployment
    spec:
      containers:
        - name: server
          image: webali/go-http-server:v0.2.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
          livenessProbe:
            httpGet:
              port: 8888
              path: "/live"
          readinessProbe:
            httpGet:
              port: 8888
              path: "/health"
          volumeMounts:
            - mountPath: /app
              name: templates
      volumes:
        - name: templates
          emptyDir: {}
